<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x540"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/x30"
    android:background="@drawable/shape_white_solid">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_modify_user_name"
        android:textColor="@color/gray_333333"
        android:textSize="@dimen/x28" />

    <poll.com.zjd.view.ClearEditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x30"
        android:background="@drawable/shape_gray_line"
        android:hint="@string/user_name"
        android:lines="1"
        android:padding="@dimen/x5"
        android:textColor="@color/gray_333333"
        android:textColorHint="@color/gray_999999"
        android:textSize="@dimen/x30" />

    <TextView
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:layout_marginTop="@dimen/x30"
        android:background="@drawable/selector_red_button"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white_ffffff" />
</LinearLayout>