<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/x64"
    android:paddingRight="@dimen/x64"
    android:background="@drawable/shape_white_solid"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_arrival_remind_title"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/x28"
        android:layout_marginTop="@dimen/x22"
        android:layout_marginBottom="@dimen/x38"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="@dimen/x65"
        android:text="@string/dialog_arrival_remind_content"
        android:textColor="@color/gray_333333"
        android:textSize="@dimen/x30"
        android:layout_weight="1"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"
        android:layout_marginTop="@dimen/x20"/>

    <TextView
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:gravity="center"
        android:text="@string/dialog_arrival_remind_ok"
        android:textColor="@color/red_e51728"
        android:textSize="@dimen/x30" />
</LinearLayout>