<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_head_back" />

    <View
        android:id="@+id/bottom_divider_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x20"
        android:background="@color/gray_f0f0f0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80">

        <TextView
            android:id="@+id/label_recipient"
            android:layout_width="@dimen/x116"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_menu_padding"
            android:text="@string/recipient"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/x28" />

        <EditText
            android:id="@+id/recipient_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/label_recipient"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/label_recipient"
            android:layout_toRightOf="@+id/label_recipient"
            android:background="@null"
            android:hint="@string/your_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/gray_333333"
            android:textColorHint="@color/gray_999999"
            android:textSize="@dimen/x26" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80">

        <TextView
            android:id="@+id/label_phone"
            android:layout_width="@dimen/x116"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_menu_padding"
            android:text="@string/your_phone_number"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/x28" />

        <poll.com.zjd.view.ClearEditText
            android:id="@+id/phone_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x27"
            android:layout_marginRight="@dimen/x30"
            android:layout_toRightOf="@id/label_phone"
            android:background="@null"
            android:hint="@string/phone_number_contact_you"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@color/gray_333333"
            android:textColorHint="@color/gray_999999"
            android:textSize="@dimen/x26" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/city_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80">

        <TextView
            android:id="@+id/label_city"
            android:layout_width="@dimen/x116"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_menu_padding"
            android:text="@string/your_city"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/x28" />

        <EditText
            android:id="@+id/city_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x27"
            android:layout_marginRight="@dimen/x30"
            android:layout_toLeftOf="@+id/city_arrow"
            android:layout_toRightOf="@id/label_city"
            android:background="@null"
            android:editable="false"
            android:ellipsize="end"
            android:hint="@string/your_local_city"
            android:lines="1"
            android:textColor="@color/gray_333333"
            android:textColorHint="@color/gray_999999"
            android:textSize="@dimen/x26" />

        <ImageView
            android:id="@+id/city_arrow"
            android:layout_width="@dimen/x24"
            android:layout_height="@dimen/x24"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/setting_menu_padding"
            android:src="@drawable/arrow_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/receiving_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80">

        <TextView
            android:id="@+id/label_receiving"
            android:layout_width="@dimen/x116"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_menu_padding"
            android:text="@string/your_receiving_city"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/x28" />

        <EditText
            android:id="@+id/receiving_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/label_receiving"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/label_receiving"
            android:layout_toRightOf="@+id/label_receiving"
            android:layout_toLeftOf="@+id/receiving_arrow"
            android:background="@null"
            android:editable="false"
            android:ellipsize="end"
            android:hint="@string/your_location_about_community"
            android:lines="1"
            android:textColor="@color/gray_333333"
            android:textColorHint="@color/gray_999999"
            android:textSize="@dimen/x26"

            />

        <ImageView
            android:id="@+id/receiving_arrow"
            android:layout_width="@dimen/x24"
            android:layout_height="@dimen/x24"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/setting_menu_padding"
            android:src="@drawable/arrow_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80">

        <TextView
            android:id="@+id/label_address"
            android:layout_width="@dimen/x116"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_menu_padding"
            android:text="@string/detail_address"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/x28" />

        <poll.com.zjd.view.ClearEditText
            android:id="@+id/address_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x27"
            android:layout_marginRight="@dimen/x30"
            android:layout_toRightOf="@id/label_address"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_detail_address"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/gray_333333"
            android:textColorHint="@color/gray_999999"
            android:textSize="@dimen/x26" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80">

        <TextView
            android:id="@+id/label_type"
            android:layout_width="@dimen/x116"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_menu_padding"
            android:text="@string/address_type"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/x28" />

        <RadioGroup
            android:id="@+id/address_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/label_type"
            android:layout_toRightOf="@+id/label_type"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/company_radio_button"
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x30"
                android:background="@drawable/selector_address_type"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/company"
                android:textColor="@drawable/selector_address_type_txt"
                android:textSize="@dimen/x22" />

            <RadioButton
                android:id="@+id/residential_radio_button"
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x30"
                android:layout_marginLeft="@dimen/x20"
                android:background="@drawable/selector_address_type"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/residential"
                android:textColor="@drawable/selector_address_type_txt"
                android:textSize="@dimen/x22" />

            <RadioButton
                android:id="@+id/school_radio_button"
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x30"
                android:layout_marginLeft="@dimen/x20"
                android:background="@drawable/selector_address_type"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/school"
                android:textColor="@drawable/selector_address_type_txt"
                android:textSize="@dimen/x22" />

            <RadioButton
                android:id="@+id/other_radio_button"
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x30"
                android:layout_marginLeft="@dimen/x20"
                android:background="@drawable/selector_address_type"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/other"
                android:textColor="@drawable/selector_address_type_txt"
                android:textSize="@dimen/x22" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f0f0f0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x80"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/x80"
            android:background="@drawable/selector_red_button"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white_ffffff"
            android:layout_marginRight="@dimen/x26"
            android:layout_marginLeft="@dimen/x26"/>
    </LinearLayout>
</LinearLayout>