<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <include
        android:id="@+id/login_head"
        layout="@layout/common_head_back" />

    <LinearLayout
        android:id="@+id/login_safe_notice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x200"
        android:layout_below="@id/login_head"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="@dimen/x30"
            android:layout_height="@dimen/x39"
            android:scaleType="fitXY"
            android:src="@drawable/safeicon" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_pay_password_for_safe"
            android:textColor="@color/green_31c27c"
            android:textSize="@dimen/x30"
            android:layout_marginLeft="@dimen/x10"/>
    </LinearLayout>

    <TextView
        android:id="@+id/password_view_notice_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_pay_password"
        android:textColor="@color/gray_a1a1a1"
        android:textSize="@dimen/x28"
        android:layout_marginLeft="@dimen/x80"
        />

    <poll.com.zjd.view.PasswordView
        android:id="@+id/password_view_first"
        android:layout_width="@dimen/x600"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginLeft="@dimen/x80"
       />

    <TextView
        android:id="@+id/password_view_notice_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x40"
        android:text="@string/confirm_input_pay_password"
        android:textColor="@color/gray_a1a1a1"
        android:textSize="@dimen/x28"
        android:layout_marginLeft="@dimen/x80"
        />

    <poll.com.zjd.view.PasswordView
        android:id="@+id/password_view_confirm"
        android:layout_width="@dimen/x600"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginTop="@dimen/x20" />

    <TextView
        android:id="@+id/text_view_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:drawableLeft="@drawable/prompt_icon"
        android:drawablePadding="@dimen/x12"
        android:text="@string/different_password_in_twice"
        android:textColor="@color/red_e51728"
        android:textSize="@dimen/x26"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginRight="@dimen/x80"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/submit_button"
        android:layout_width="@dimen/login_edit_view_width"
        android:layout_height="@dimen/x80"
        android:layout_marginTop="@dimen/x36"
        android:text="@string/submit"
        android:gravity="center"
        android:background="@drawable/selector_red_button"
        android:textColor="@color/white_ffffff"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>